--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,22 +1,6 @@
-site_name: Social Cards Template
-site_url: https://www.example.com
+site_name: Growbox Documentation
+site_url: https://finki001.github.io/growbox-documentation
+repo_url: https://github.com/finki001/growbox-documentation
 
 theme:
   name: material
-  custom_dir: overrides
-  icon:
-    logo: logo-monochrome
-  
-
-plugins:
-  - search
-  - meta
-  - social:
-      cards_layout: default/variant
-      cards_layout_options:
-        background_image: layouts/background_normal.png
-        background_color: transparent
-      cards_layout_dir: layouts
-
-watch:
-  - layouts
